--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body {
   background-image: url(assets/images/background-pattern-mobile.svg);
   display: flex;
   justify-content: center;
+  align-items: center;
+  height: 100vh;
   color: hsl(292, 42%, 14%);
   background-repeat: no-repeat;
   background-color: hsl(275, 100%, 97%);
@@ -28,10 +30,12 @@ h2 {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  cursor: pointer;
+  margin-bottom: 17px;
 }
 
 h2:hover {
-  color: hsl(292, 16%, 49%);
+  color: hsl(293, 95%, 43%);
 }
 
 p {
@@ -39,7 +43,7 @@ p {
 }
 
 .container {
-    max-width: 375px;
+  max-width: 375px;
   flex-direction: column;
   padding: 2rem;
   border-radius: 10px;
@@ -67,6 +71,20 @@ p {
   color: hsl(292, 16%, 49%);
   margin: 1.5rem 0;
   line-height: 1.5;
+}
+
+.faq.active .answer {
+  display: block;
+}
+
+.faq.active .dropdown {
+
+}
+
+.answer {
+  display: none;
+  transition: max-height 1.4s ease;
+  overflow: hidden;
 }
 
 @media (min-width: 411px) {
